--- a/src/app/product-alerts/product-alerts.component.html
+++ b/src/app/product-alerts/product-alerts.component.html
@@ -5,3 +5,5 @@
 <p *ngIf="product && product.price > 700">
 <button type="button" (click)="notify.emit()">Notify Me</button>
 </p>
+
+<p> good luck </p>
