--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,16 @@
 <h2>Products</h2>
 
 <div *ngFor="let product of products">
-  <h3>
+  
+  
 
-  <a [title]="product.name + ' details'">
+<h3>
+<a
+  [title]="product.name + ' details'"
+  [routerLink]="['/products', product.id]">
   {{ product.name }}
 </a>
-  </h3>
+</h3>
 
 
   <p *ngIf="product.description">
